--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:15
@@ -11,19 +9,18 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init.sql
 
   backend:
     build:
-      context: ../apps/backend
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: apps/backend/Dockerfile
     env_file:
       - ../apps/backend/.env
     ports:
       - "3001:3001"
     depends_on:
       - postgres
-    command: ["npm", "run", "start:prod"]
+    command: ["node", "dist/main.js"]
 
 volumes:
   postgres_data:
