--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-starter",
+  "name": "biplace-booking",
   "private": true,
   "workspaces": [
     "apps/*"
@@ -12,7 +12,7 @@
     "dev:backend": "turbo start:dev --filter=backend",
     "dev:frontend": "turbo dev --filter=frontend",
     "start": "turbo start",
-    "docker:up": "docker-compose -f infra/docker-compose.yml up --build"
+    "docker:up": "docker compose -f infra/docker-compose.yml up --build"
   },
   "packageManager": "pnpm@8.0.0"
 }
