handle cpu/mem limitations

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -10,13 +10,35 @@ POSTGRES_DB=your_database_name
 POSTGRES_PORT=5432
 
 # Docker/Caddy Configuration (used by docker-compose for staging/prod)
-BACKEND_PORT=3001
 HTTP_PORT=80
 HTTPS_PORT=443
 
 # Backend Configuration (passed to backend app via env_file)
-DATABASE_URL=postgresql://user:password@host:port/database
 NODE_ENV=development
 PORT=3001
-JWT_SECRET=your-very-secure-jwt-secret
-LOG_LEVEL=debug
+
+# Resource Limits (adjust based on environment)
+# PostgreSQL Resources
+POSTGRES_MEMORY_LIMIT=64M
+POSTGRES_MEMORY_RESERVATION=32M
+POSTGRES_CPU_LIMIT=0.3
+POSTGRES_CPU_RESERVATION=0.15
+POSTGRES_SHARED_BUFFERS=16MB
+POSTGRES_CACHE_SIZE=48MB
+POSTGRES_MAINTENANCE_MEM=8MB
+POSTGRES_WORK_MEM=1MB
+POSTGRES_MAX_CONNECTIONS=25
+
+# Backend Resources
+BACKEND_MEMORY_LIMIT=80M
+BACKEND_MEMORY_RESERVATION=48M
+BACKEND_CPU_LIMIT=0.4
+BACKEND_CPU_RESERVATION=0.2
+NODE_MAX_OLD_SPACE=60
+UV_THREADPOOL_SIZE=2
+
+# Caddy Resources
+CADDY_MEMORY_LIMIT=32M
+CADDY_MEMORY_RESERVATION=16M
+CADDY_CPU_LIMIT=0.2
+CADDY_CPU_RESERVATION=0.1
