--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -8,13 +8,35 @@ POSTGRES_DB=biplace_prod
 POSTGRES_PORT=5432
 
 # Docker/Caddy Configuration (used by docker-compose)
-BACKEND_PORT=3001
 HTTP_PORT=80
 HTTPS_PORT=443
 
 # Backend Configuration (passed to backend app)
-DATABASE_URL=postgresql://prod_user:prod_very_secure_password_change_me@postgres:5432/biplace_prod
 NODE_ENV=production
 PORT=3001
-JWT_SECRET=production-jwt-secret-use-a-very-secure-random-string-here
-LOG_LEVEL=error
+
+# Resource Limits - Production (4x higher than staging)
+# PostgreSQL Resources
+POSTGRES_MEMORY_LIMIT=256M
+POSTGRES_MEMORY_RESERVATION=128M
+POSTGRES_CPU_LIMIT=1.2
+POSTGRES_CPU_RESERVATION=0.6
+POSTGRES_SHARED_BUFFERS=64MB
+POSTGRES_CACHE_SIZE=192MB
+POSTGRES_MAINTENANCE_MEM=32MB
+POSTGRES_WORK_MEM=4MB
+POSTGRES_MAX_CONNECTIONS=100
+
+# Backend Resources
+BACKEND_MEMORY_LIMIT=320M
+BACKEND_MEMORY_RESERVATION=192M
+BACKEND_CPU_LIMIT=1.6
+BACKEND_CPU_RESERVATION=0.8
+NODE_MAX_OLD_SPACE=240
+UV_THREADPOOL_SIZE=4
+
+# Caddy Resources
+CADDY_MEMORY_LIMIT=128M
+CADDY_MEMORY_RESERVATION=64M
+CADDY_CPU_LIMIT=0.8
+CADDY_CPU_RESERVATION=0.4
