--- a/infra/.env.staging
+++ b/infra/.env.staging
@@ -8,13 +8,35 @@ POSTGRES_DB=biplace_staging
 POSTGRES_PORT=5432
 
 # Docker/Caddy Configuration (used by docker-compose)
-BACKEND_PORT=3001
-HTTP_PORT=80
-HTTPS_PORT=443
+HTTP_PORT=8080
+HTTPS_PORT=8443
 
 # Backend Configuration (passed to backend app)
-DATABASE_URL=postgresql://staging_user:staging_secure_password_change_me@postgres:5432/biplace_staging
 NODE_ENV=staging
-PORT=3001
-JWT_SECRET=staging-jwt-secret-change-me-to-something-secure
-LOG_LEVEL=info
+PORT=3002
+
+# Resource Limits - Staging (Lower allocation)
+# PostgreSQL Resources
+POSTGRES_MEMORY_LIMIT=64M
+POSTGRES_MEMORY_RESERVATION=32M
+POSTGRES_CPU_LIMIT=0.3
+POSTGRES_CPU_RESERVATION=0.15
+POSTGRES_SHARED_BUFFERS=16MB
+POSTGRES_CACHE_SIZE=48MB
+POSTGRES_MAINTENANCE_MEM=8MB
+POSTGRES_WORK_MEM=1MB
+POSTGRES_MAX_CONNECTIONS=25
+
+# Backend Resources
+BACKEND_MEMORY_LIMIT=80M
+BACKEND_MEMORY_RESERVATION=48M
+BACKEND_CPU_LIMIT=0.4
+BACKEND_CPU_RESERVATION=0.2
+NODE_MAX_OLD_SPACE=60
+UV_THREADPOOL_SIZE=2
+
+# Caddy Resources
+CADDY_MEMORY_LIMIT=32M
+CADDY_MEMORY_RESERVATION=16M
+CADDY_CPU_LIMIT=0.2
+CADDY_CPU_RESERVATION=0.1
