--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       - "${HTTP_PORT}:80"
       - "${HTTPS_PORT}:443"
     volumes:
-      - ./Caddyfile.${ENV}:/etc/caddy/Caddyfile
+      - ./env/${ENV}/Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
     depends_on:
