--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "workspaces": [
     "apps/*"
   ],
+  "devDependencies": {
+    "turbo": "2.5.8"
+  },
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
