--- a/infra/env/staging/Caddyfile
+++ b/infra/env/staging/Caddyfile
@@ -1,5 +1,5 @@
 # Staging API
-api-staging.duckparapente.fr {
+bb-backend-staging.duckparapente.fr {
     reverse_proxy backend:3002
     
     # Security headers (less strict for staging)
