--- a/infra/env/prod/.env
+++ b/infra/env/prod/.env
@@ -8,6 +8,7 @@ POSTGRES_DB=biplace_prod
 POSTGRES_PORT=5432
 
 # Backend Configuration (passed to backend app)
+COMPOSE_PROJECT_NAME=bb-backend-prod
 NODE_ENV=production
 PORT=3001
 
