--- a/infra/env/staging/.env
+++ b/infra/env/staging/.env
@@ -8,6 +8,7 @@ POSTGRES_DB=biplace_staging
 POSTGRES_PORT=5432
 
 # Backend Configuration (passed to backend app)
+COMPOSE_PROJECT_NAME=bb-backend-staging
 NODE_ENV=staging
 PORT=3002
 
