fix staging db port

--- a/infra/env/staging/.env
+++ b/infra/env/staging/.env
@@ -9,6 +9,7 @@ POSTGRES_PORT=5433
 
 # Backend Configuration (passed to backend app)
 COMPOSE_PROJECT_NAME=bb-backend-staging
+COMPOSE_NETWORK_NAME=staging_internal
 NODE_ENV=staging
 PORT=3002
 
