--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "${POSTGRES_PORT}:5432"
+    networks:
+      - internal
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -34,8 +36,8 @@ services:
   # Backend Application (only for staging/prod)
   backend:
     image: biplace-backend:prod ## WIP
-    ports:
-      - "${PORT}:3001"
+    networks:
+      - internal
     depends_on:
       - postgres
     command: ["node", "dist/main.js"]
@@ -60,6 +62,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      - internal
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
@@ -82,3 +86,7 @@ volumes:
   postgres_data:
   caddy_data:
   caddy_config:
+
+networks:
+  internal:
+    name: ${COMPOSE_NETWORK_NAME}
