--- a/infra/env/prod/.env
+++ b/infra/env/prod/.env
@@ -9,6 +9,7 @@ POSTGRES_PORT=5432
 
 # Backend Configuration (passed to backend app)
 COMPOSE_PROJECT_NAME=bb-backend-prod
+COMPOSE_NETWORK_NAME=prod_internal
 NODE_ENV=production
 PORT=3001
 
