remove env subfolders

--- a/infra/.env
+++ b/infra/.env
@@ -8,6 +8,7 @@ POSTGRES_DB=biplace_local
 POSTGRES_PORT=5432
 
 # Backend Configuration (passed to backend app)
+COMPOSE_PROJECT_NAME=bb-backend-local
 NODE_ENV=development
 PORT=3001
 
