--- a/infra/.env.staging
+++ b/infra/.env.staging
@@ -1,17 +1,18 @@
-# Environment Configuration Example
-ENV=local
+# Staging Environment
+ENV=staging
 
 # Database Configuration (used by docker-compose)
-POSTGRES_USER=your_db_user
-POSTGRES_PASSWORD=your_secure_password
-POSTGRES_DB=your_database_name
-POSTGRES_PORT=5432
+POSTGRES_USER=staging_user
+POSTGRES_PASSWORD=staging_secure_password_change_me
+POSTGRES_DB=biplace_staging
+POSTGRES_PORT=5433
 
-# Backend Configuration (passed to backend app via env_file)
-NODE_ENV=development
+# Backend Configuration (passed to backend app)
+COMPOSE_PROJECT_NAME=bb-backend-staging
+NODE_ENV=staging
 PORT=3001
 
-# Resource Limits (adjust based on environment)
+# Resource Limits - Staging (Lower allocation)
 # PostgreSQL Resources
 POSTGRES_MEMORY_LIMIT=64M
 POSTGRES_MEMORY_RESERVATION=32M
