remove local from deploy script

--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "dev:backend": "turbo start:dev --filter=backend",
     "dev:frontend": "turbo dev --filter=frontend",
     "start": "turbo start",
-    "docker:local": "cd infra && ./scripts/deploy.sh local",
+    "docker:local": "cd infra && docker compose --profile local",
     "docker:staging": "cd infra && ./scripts/deploy.sh staging",
     "docker:prod": "cd infra && ./scripts/deploy.sh prod",
-    "docker:down:local": "cd infra && docker compose --profile local down",
     "docker:down:staging": "cd infra && docker compose --profile staging down",
     "docker:down:prod": "cd infra && docker compose --profile prod down",
-    "docker:logs:local": "cd infra && docker compose --profile local logs -f",
     "docker:logs:staging": "cd infra && docker compose --profile staging logs -f",
     "docker:logs:prod": "cd infra && docker compose --profile prod logs -f",
     "docker:monitor": "cd infra && ./scripts/monitor-resources.sh"
