--- a/package.json
+++ b/package.json
@@ -16,12 +16,8 @@
     "dev:frontend": "turbo dev --filter=frontend",
     "start": "turbo start",
     "docker:local": "cd infra && docker compose --profile local",
-    "deploy:image:staging": "cd infra && ./scripts/deploy-image.sh staging",
-    "deploy:image:prod": "cd infra && ./scripts/deploy-image.sh prod",
-    "docker:staging": "cd infra && ./scripts/deploy.sh staging",
-    "docker:prod": "cd infra && ./scripts/deploy.sh prod",
-    "docker:down:staging": "cd infra && docker compose --profile staging down",
-    "docker:down:prod": "cd infra && docker compose --profile prod down",
+    "build:image:staging": "cd infra && ./scripts/build-push-image.sh staging",
+    "build:image:prod": "cd infra && ./scripts/build-push-image.sh prod",
     "docker:logs:staging": "cd infra && docker compose --profile staging logs -f",
     "docker:logs:prod": "cd infra && docker compose --profile prod logs -f",
     "docker:monitor": "cd infra && ./scripts/monitor-resources.sh"
