--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "dev:backend": "turbo start:dev --filter=backend",
     "dev:frontend": "turbo dev --filter=frontend",
     "start": "turbo start",
-    "docker:local": "cd infra && docker compose --profile local",
+    "dc:local": "cd infra && docker compose --profile local",
     "deploy:staging": "./infra/scripts/deploy.sh staging",
     "deploy:prod": "./infra/scripts/deploy.sh prod",
-    "docker:logs:staging": "cd infra && docker compose --profile staging logs -f",
-    "docker:logs:prod": "cd infra && docker compose --profile prod logs -f",
-    "docker:monitor": "./infra/scripts/monitor-resources.sh"
+    "dc:logs:staging": "cd infra && docker compose --profile staging logs -f",
+    "dc:logs:prod": "cd infra && docker compose --profile prod logs -f",
+    "dc:main-caddy": "docker compose -f docker-compose.entrypoint.yml",
+    "monitor": "./infra/scripts/monitor-resources.sh"
   },
   "packageManager": "pnpm@8.0.0"
 }
