--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "deploy:prod": "./infra/scripts/deploy.sh prod",
     "dc:logs:staging": "cd infra && docker compose --profile staging logs -f",
     "dc:logs:prod": "cd infra && docker compose --profile prod logs -f",
-    "dc:main-caddy": "docker compose -f docker-compose.entrypoint.yml",
+    "dc:main-caddy": "cd infra && docker compose -f docker-compose.entrypoint.yml",
     "monitor": "./infra/scripts/monitor-resources.sh"
   },
   "packageManager": "pnpm@8.0.0"
