--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "2.4.0",
     "nuxt": "4.2.0",
     "vue": "3.5.22",
     "vue-router": "4.6.3"
