--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,26 +7,20 @@
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
     "start:prod": "node dist/main.js",
-    "lint": "eslint 'src/**/*.ts' || true",
     "test": "echo \"No tests configured\""
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
-    "reflect-metadata": "^0.1.13",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "express": "^4.18.2"
+    "@nestjs/common": "10.0.0",
+    "@nestjs/core": "10.0.0",
+    "@nestjs/platform-express": "10.0.0",
+    "@nestjs/config": "3.0.0",
+    "reflect-metadata": "0.1.13",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/express": "^4.17.21",
-    "eslint": "^9.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0"
+    "ts-node-dev": "2.0.0",
+    "@types/express": "4.17.21"
   }
 }
