--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
     "apps/*"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.0.0",
-    "@typescript-eslint/parser": "7.0.0",
+    "@typescript-eslint/eslint-plugin": "8.46.2",
+    "@typescript-eslint/parser": "8.46.2",
     "eslint": "9.0.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-unused-imports": "3.0.0",
-    "eslint-plugin-vue": "9.24.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-unused-imports": "4.3.0",
+    "eslint-plugin-vue": "10.5.1",
     "husky": "9.1.7",
     "lint-staged": "15.0.0",
     "prettier": "3.2.0",
     "turbo": "2.5.8",
-    "vue-eslint-parser": "9.3.1",
-    "typescript": "5.3.3"
+    "vue-eslint-parser": "10.2.0",
+    "@types/node": "20.19.0",
+    "typescript": "5.9.3"
   },
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "prepare": "husky install",
     "lint": "eslint apps",
     "lint:fix": "eslint apps --fix && prettier apps --write",
     "test": "turbo test",
@@ -45,5 +45,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "pnpm@9.0.0"
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=20.10.0"
+  }
 }
