--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
     "start:prod": "node dist/main.js",
@@ -17,6 +17,8 @@
     "reflect-metadata": "0.1.13",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "dotenv": "17.2.3",
+    "newrelic": "13.6.2",
     "express": "4.18.2"
   },
   "devDependencies": {
