--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - NODE_OPTIONS=--max-old-space-size=${NODE_MAX_OLD_SPACE}
       - UV_THREADPOOL_SIZE=${UV_THREADPOOL_SIZE}
     volumes:
-      - ./infra/.env:/app/infra/.env:ro
+      - .env:/app/infra/.env:ro
 
   # Caddy Reverse Proxy (only for staging/prod)
   caddy:
