--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/main.ts | pino-pretty",
+    "dev": "ts-node-dev --respawn --transpile-only --env-file=../../infra/.env src/main.ts | pino-pretty",
     "start": "node dist/main.js",
+    "start:local": "node --env-file=../../infra/.env dist/main.js",
     "build": "tsc -p tsconfig.json",
-    "start:prod": "node dist/main.js",
     "test": "echo \"No tests configured\""
   },
   "dependencies": {
@@ -16,11 +16,10 @@
     "@nestjs/platform-express": "10.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "dotenv": "17.2.3",
     "express": "4.18.2",
     "nestjs-pino": "4.4.1",
     "newrelic": "13.6.2",
-    "pino-pretty": "^13.1.2",
+    "pino-pretty": "13.1.2",
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
