--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
+    "auth0": "5.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "express": "4.18.2",
