--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.0",
+    "@nestjs/cqrs": "11.0.3",
     "@nestjs/platform-express": "10.0.0",
     "auth0": "5.0.0",
     "class-transformer": "0.5.1",
