--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -11,11 +11,13 @@
     "outDir": "dist",
     "incremental": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "@libs/*": ["src/libs/*"]
+      "@*": ["src/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
