fix alias in compiled code

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "baseUrl": "./",
     "paths": {
-      "@*": ["src/*"]
+      "@libs/*": ["src/libs/*"]
     }
   },
   "include": ["src/**/*"],
