--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --env-file=../../infra/.env src/main.ts | pino-pretty",
     "start": "node dist/main.js",
     "start:local": "node --env-file=../../infra/.env dist/main.js",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && tsc-alias",
     "test": "echo \"No tests configured\""
   },
   "dependencies": {
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/express": "4.17.21",
     "ts-node-dev": "2.0.0",
+    "tsc-alias": "1.8.16",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.9.3"
   }
