--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
     "@nestjs/core": "10.0.0",
     "@nestjs/cqrs": "11.0.3",
     "@nestjs/platform-express": "10.0.0",
+    "@prisma/client": "6.18.0",
     "auth0": "5.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -22,7 +23,8 @@
     "nestjs-pino": "4.4.1",
     "newrelic": "13.6.2",
     "pino-pretty": "13.1.2",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "pino": "9.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
