--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --env-file=../../infra/.env src/main.ts | pino-pretty",
+    "dotenv": "dotenv -e ../../infra/.env",
+    "dev": "pnpm dotenv -- ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts | pino-pretty",
     "start": "node dist/main.js",
-    "start:local": "node --env-file=../../infra/.env dist/main.js",
-    "build": "tsc -p tsconfig.json && tsc-alias",
-    "test": "echo \"No tests configured\""
+    "start:local": "pnpm dotenv -- node dist/main.js",
+    "build": "pnpm dotenv -- tsc -p tsconfig.json && tsc-alias",
+    "test": "echo \"No tests configured\"",
+    "prisma:generate": "pnpm dotenv -- pnpm exec prisma generate",
+    "prisma:migrate": "pnpm dotenv -- pnpm exec prisma migrate dev",
+    "start:prod": "pnpm exec prisma migrate deploy && node dist/main.js"
   },
   "dependencies": {
     "@nestjs/common": "10.0.0",
@@ -22,12 +26,14 @@
     "express": "4.18.2",
     "nestjs-pino": "4.4.1",
     "newrelic": "13.6.2",
+    "pino": "9.0.0",
     "pino-pretty": "13.1.2",
-    "reflect-metadata": "0.1.13",
-    "pino": "9.0.0"
+    "prisma": "^6.18.0",
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
+    "dotenv-cli": "11.0.0",
     "ts-node-dev": "2.0.0",
     "tsc-alias": "1.8.16",
     "tsconfig-paths": "4.2.0",
