--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,6 +18,7 @@
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.0",
     "@nestjs/cqrs": "11.0.3",
+    "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "10.0.0",
     "@prisma/client": "6.18.0",
     "auth0": "5.0.0",
@@ -25,15 +26,19 @@
     "class-validator": "0.14.0",
     "dotenv-cli": "11.0.0",
     "express": "4.18.2",
+    "jwks-rsa": "3.2.0",
     "nestjs-pino": "4.4.1",
     "newrelic": "13.6.2",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
     "pino": "9.0.0",
     "pino-pretty": "13.1.2",
-    "prisma": "^6.18.0",
+    "prisma": "6.18.0",
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
+    "@types/passport-jwt": "4.0.1",
     "ts-node-dev": "2.0.0",
     "tsc-alias": "1.8.16",
     "tsconfig-paths": "4.2.0",
