--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,8 @@
     "nuxt": "4.2.0",
     "posthog-js": "1.282.0",
     "vue": "3.5.22",
-    "vue-router": "4.6.3"
+    "vue-router": "4.6.3",
+    "zod": "4.1.12"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "6.14.0"
