--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,7 +34,8 @@
     "pino": "9.0.0",
     "pino-pretty": "13.1.2",
     "prisma": "6.18.0",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
