--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-bookworm-slim AS build
+FROM node:20-bookworm AS build
 WORKDIR /app
 ENV NODE_OPTIONS=--dns-result-order=ipv4first
 RUN npm install -g pnpm@8.15.4
@@ -10,6 +10,11 @@ COPY pnpm-lock.yaml ./pnpm-lock.yaml
 # Install dev + prod dependencies to build
 RUN pnpm install --frozen-lockfile || pnpm install
 
+# Copy Prisma config and schema, then generate client during build
+COPY apps/backend/prisma.config.ts ./prisma.config.ts
+COPY apps/backend/src/libs/database/prisma ./src/libs/database/prisma
+RUN pnpm exec prisma generate
+
 # Copy source & tsconfig
 COPY apps/backend/tsconfig.json ./tsconfig.json
 COPY apps/backend/src ./src
@@ -17,13 +22,22 @@ COPY apps/backend/src ./src
 # Build (outputs dist/main.js)
 RUN pnpm run build
 
-FROM node:20-bookworm-slim AS prod
+FROM node:20-bookworm AS prod
 WORKDIR /app
 ENV NODE_ENV=production
 RUN npm install -g pnpm@8.15.4
 COPY apps/backend/package.json ./package.json
 COPY pnpm-lock.yaml ./pnpm-lock.yaml
+
+# Copy Prisma config and schema before installing dependencies
+COPY apps/backend/prisma.config.ts ./prisma.config.ts
+COPY apps/backend/src/libs/database/prisma ./src/libs/database/prisma
+
+# Install production dependencies (this will also postinstall prisma generate)
 RUN pnpm install --frozen-lockfile --prod --no-optional || pnpm install --prod --no-optional
+
+# Generate Prisma client in production stage
+RUN pnpm exec prisma generate
 
 COPY --from=build /app/dist ./dist
 EXPOSE 3001
