--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,7 +35,8 @@
     "pino-pretty": "13.1.2",
     "prisma": "6.18.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.2"
+    "rxjs": "7.8.2",
+    "shared": "workspace:*"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
