--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-vue": "2.4.0",
     "nuxt": "4.2.0",
     "posthog-js": "1.282.0",
+    "shared": "workspace:*",
     "vue": "3.5.22",
     "vue-router": "4.6.3",
     "zod": "4.1.12"
