--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "biplace-booking",
   "private": true,
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.46.2",
