--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -14,7 +14,7 @@
     "baseUrl": "./",
     "paths": {
       "@*": ["src/*"],
-      "@shared": ["../../packages/shared/src"]
+      "shared": ["../../packages/shared/src"]
     }
   },
   "include": ["src/**/*"],
