--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     depends_on:
       - postgres
     # Run migrations before starting the app (in a single command to avoid pnpm overhead)
-    command: ['sh', '-c', 'npx prisma migrate deploy && node dist/main.js']
+    command: ['pnpm', 'run', 'start:prod']
     restart: unless-stopped
     profiles: ['staging', 'prod']
     env_file:
