--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dotenv": "dotenv -e ../../infra/.env",
     "dev": "pnpm dotenv -- ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts | pino-pretty",
-    "start": "node dist/main.js",
+    "start": "node dist/apps/backend/src/main.js",
     "build": "pnpm dotenv -- tsc -p tsconfig.json && tsc-alias",
     "test": "echo \"No tests configured\"",
     "prisma:generate": "pnpm dotenv -- pnpm exec prisma generate",
     "prisma:migrate": "pnpm dotenv -- pnpm exec prisma migrate dev",
     "prisma:deploy": "pnpm dotenv -- pnpm exec prisma migrate deploy",
-    "start:prod": "pnpm prisma:deploy && node dist/main.js"
+    "start:prod": "pnpm prisma:deploy && pnpm start"
   },
   "dependencies": {
     "@nestjs/common": "10.0.0",
