--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "2.4.0",
+    "lodash": "4.17.21",
     "nuxt": "4.2.0",
     "posthog-js": "1.282.0",
     "shared": "workspace:*",
