--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,7 +36,8 @@
     "prisma": "6.18.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.2",
-    "shared": "workspace:*"
+    "shared": "workspace:*",
+    "uuid": "13.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
