--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "turbo build",
     "dev": "pnpm dc:local up -d && turbo dev",
-    "lint": "eslint apps",
+    "lint": "eslint apps && pnpm --filter=backend lint:deps",
     "lint:fix": "eslint apps --fix && prettier apps --write",
     "test": "turbo test",
     "dev:backend": "turbo dev --filter=backend",
