--- a/infra/Caddyfile
+++ b/infra/Caddyfile
@@ -16,10 +16,7 @@
     
     # Access logging
     log {
-        output file /var/log/caddy/access.log {
-            roll_size 10mb
-            roll_keep 5
-        }
+        output stdout
         format json
     }
 }
