--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -46,6 +46,14 @@ services:
     profiles: ['staging', 'prod']
     env_file:
       - .env
+    deploy:
+      resources:
+        limits:
+          memory: ${BACKEND_MEMORY_LIMIT}
+          cpus: ${BACKEND_CPU_LIMIT}
+        reservations:
+          memory: ${BACKEND_MEMORY_RESERVATION}
+          cpus: ${BACKEND_CPU_RESERVATION}
 
   # Caddy Reverse Proxy (only for staging/prod)
   caddy:
