--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/apps/backend/src/main.js",
     "attribute": "node dist/apps/backend/src/console.js run:attribute-packs",
     "build": "tsc -p tsconfig.json && tsc-alias",
-    "test": "echo \"No tests configured\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint:deps": "depcruise src --config ./dependency-cruiser.js --validate",
     "prisma:generate": "pnpm exec prisma generate",
     "prisma:migrate": "pnpm dotenv -- pnpm exec prisma migrate dev",
@@ -45,8 +46,11 @@
   },
   "devDependencies": {
     "@types/express": "4.17.21",
+    "@types/jest": "29.5.12",
     "@types/passport-jwt": "4.0.1",
     "dependency-cruiser": "17.2.0",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.2",
     "ts-node-dev": "2.0.0",
     "tsc-alias": "1.8.16",
     "tsconfig-paths": "4.2.0",
