--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
       "cache": false,
       "persistent": true
     },
+    "attribute:dev": {
+      "cache": false,
+      "persistent": true
+    },
     "start": {
       "cache": false,
       "persistent": true
