--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,7 +30,9 @@
     "class-validator": "0.14.0",
     "dotenv-cli": "11.0.0",
     "express": "4.18.2",
+    "form-data": "4.0.5",
     "jwks-rsa": "3.2.0",
+    "mailgun.js": "12.2.0",
     "nestjs-console": "10.0.0",
     "nestjs-pino": "4.4.1",
     "newrelic": "13.6.2",
