--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "dist",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
+    "strict": true,
     "baseUrl": "./",
     "paths": {
       "@*": ["src/*"],
